--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Services.tsx", "src/components/Slider.jsx", "src/components/Slide.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Services.tsx", "src/components/Slider.tsx", "src/components/Slide.tsx"],
   "exclude": ["node_modules"]
 }
