--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.65.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.10"
   }
 }
