--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
+    "react-scroll": "^1.8.9",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.65.1",
@@ -31,6 +32,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/react-scroll": "^1.8.7",
     "@types/react-slick": "^0.23.10"
   }
 }
