--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "carp-travel",
   "version": "0.1.0",
+	"homepage": "https://github.com/RomanPyryn/carp-travel",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+		"deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
     "@types/node": "20.5.0",
@@ -17,6 +19,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "gh-pages": "^6.0.0",
     "next": "13.4.16",
     "postcss": "8.4.27",
     "react": "18.2.0",
